--- a/Tracker/packages.config
+++ b/Tracker/packages.config
@@ -8,6 +8,7 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Windsor.Mvc" version="1.3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="EntityFrameworkProfiler.Appender" version="2.0.2237.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
