--- a/Tracker/Views/Web.config
+++ b/Tracker/Views/Web.config
@@ -25,7 +25,9 @@
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
-
+  <system.web>
+    <globalization uiCulture="en-GB" culture="en-GB" />
+  </system.web>
   <system.webServer>
     <handlers>
       <remove name="BlockViewHandler"/>
